move parameters and some responses into own components
